--- a/index.html
+++ b/index.html
@@ -1517,6 +1517,7 @@
           <div class="week-day-date">
             <span class="week-day-name">${t(WEEKDAYS[date.getDay()])}</span>
             <span class="week-day-number">${dayDisplay}</span>
+            ${state.settings.showGregorian ? `<span class="day-gregorian">${date.getDate()}/${date.getMonth()+1}</span>` : ''}
           </div>
           <div class="week-day-events">
             ${events.length === 0 ? '<span style="color:var(--color-text-tertiary)">—</span>' : 
