Correct animal zodiac order: Horse -> Monkey -> Ram

--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
       { id: 4, proto: 'ДВАН', bg: 'Заек', en: 'Rabbit', emoji: '🐰', color: '#E8DCC8' },
       { id: 5, proto: 'ВЕРЕНИ', bg: 'Дракон', en: 'Dragon', emoji: '🐉', color: '#2E8B57' },
       { id: 6, proto: 'ДИЛОМ', bg: 'Змия', en: 'Snake', emoji: '🐍', color: '#6B3FA0' },
-      { id: 7, proto: 'ТЕ|КУ', bg: 'Кон', en: 'Horse', emoji: '🐴', color: '#8B4513' },
+      { id: 7, proto: 'TEKU', bg: 'Кон', en: 'Horse', emoji: '🐴', color: '#8B4513' },
       { id: 8, proto: 'ПИСИН', bg: 'Маймуна', en: 'Monkey', emoji: '🐵', color: '#DAA520' },
       { id: 9, proto: 'СУРАХ', bg: 'Овен', en: 'Ram', emoji: '🐏', color: '#FFFFF0' },
       { id: 10, proto: 'ТОХ', bg: 'Петел', en: 'Rooster', emoji: '🐓', color: '#DC143C' },
@@ -1073,7 +1073,7 @@
     }
 
     function getAnimalForYear(pbYear) {
-      const asparuhYear = 6185;
+      const asparuhYear = 6186;
       const asparuhAnimalIndex = 5;
       const yearDiff = pbYear - asparuhYear;
       const idx = ((yearDiff % 12) + 12 + asparuhAnimalIndex) % 12;
