Update PWA manifest for icons/splash and set default settings

--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,7 @@
         lang: 'bg',
         useProto: true,
         weekStartsOn: 1,
-        showGregorian: false,
+        showGregorian: true,
         tutorialDone: false,
       },
       selectedDate: null,
